# llm-abhidharma

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/JSON/: wanglu.json
data/JSON/all/: T1545_002.json  T1545_005.json  T1545_006.json  T1545_007.json  T1545_009.json  T1545_011.json  T1545_012.json  T1545_013.json  T1545_016.json  T1545_017.json  T1545_018.json  T1545_021.json  T1545_022.json  T1545_025.json  T1545_026.json  T1545_027.json  T1545_033.json  T1545_034.json  T1545_035.json  T1545_037.json  T1545_038.json  T1545_039.json  T1545_040.json  T1545_041.json  T1545_042.json  T1545_043.json  T1545_044.json  T1545_045.json  T1545_047.json  T1545_050.json  T1545_052.json  T1545_053.json  T1545_055.json  T1545_056.json  T1545_059.json  T1545_060.json  T1545_061.json  T1545_063.json  T1545_064.json  T1545_065.json  (+133 more)
data/JSON/俱舍论/: T1558_001.json  T1558_002.json  T1558_004.json  T1558_006.json  T1558_008.json  T1558_010.json  T1558_012.json  T1558_013.json  T1558_018.json  T1558_019.json  T1558_020.json  T1558_021.json  T1558_025.json  T1558_026.json
data/JSON/大毘婆沙論/: T1545_001.json  T1545_003.json  T1545_004.json  T1545_008.json  T1545_010.json  T1545_014.json  T1545_015.json  T1545_019.json  T1545_020.json  T1545_023.json  T1545_024.json  T1545_028.json  T1545_029.json  T1545_030.json  T1545_031.json  T1545_032.json  T1545_036.json  T1545_046.json  T1545_048.json  T1545_049.json  T1545_051.json  T1545_054.json  T1545_057.json  T1545_058.json  T1545_062.json  T1545_066.json  T1545_069.json  T1545_071.json  T1545_073.json  T1545_076.json  T1545_081.json  T1545_083.json  T1545_084.json  T1545_085.json  T1545_087.json  T1545_093.json  T1545_094.json  T1545_096.json  T1545_100.json  T1545_101.json  (+44 more)
data/JSON/顺正理论/: T1562_001.json  T1562_003.json  T1562_005.json  T1562_006.json  T1562_007.json  (+31 more)
scripts/: convert_zh.py  download_model.py  merge_hfl.py  tokenize_data.py  txt2json_jushe_zhengli.py  txt2json_posha.py
(+313 files in other folders)
